overlays/resources/openshift/internal-service.yaml
# Copyright 2020 The Tekton Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
# ------- Insecure Dashboard Service - Do Not Expose ------ #
kind: Service
apiVersion: v1
metadata:
  name: tekton-dashboard-internal
  namespace: tekton-pipelines
  labels:
    app: tekton-dashboard-internal
    version: "devel"
    dashboard.tekton.dev/release: "devel"
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9097
      targetPort: 9097
  selector:
    app: tekton-dashboard
